# halo2-modified

./: README.md
halo2_proofs/: Cargo.toml
halo2_proofs/benches/: fft.rs  test_ark.rs  test_exp.rs  test_multi.rs  test_transfer.rs
halo2_proofs/src/: arithmetic.rs  lib.rs  main.rs  multi-thread.rs  transform.rs
sppark-main/poc/msm-cuda/: Cargo.toml
sppark-main/poc/msm-cuda/benches/: msm.rs
sppark-main/poc/msm-cuda/cuda/: pippenger_inf.cu
sppark-main/poc/msm-cuda/src/: lib.rs
sppark-main/poc/msm-cuda/tests/: msm.rs
